File and Documentation changes

--- a/model.ipynb
+++ b/model.ipynb
@@ -924,6 +924,7 @@
     }
    ],
    "source": [
+    "# just renaming variables\n",
     "testData = Data\n",
     "testData.head()"
    ]
@@ -1090,7 +1091,6 @@
    ],
    "source": [
     "# Drop Entitiy column table\n",
-    "\n",
     "testData.drop(columns=\"Entity\", inplace=True)\n",
     "testData.head()"
    ]
